deployment/base/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
spec:
  selector:
    app: backstage
  type: NodePort
  ports:
    - protocol: TCP
      port: 7007
      targetPort: 7007
      nodePort: 30090
      name: service
